--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Life-in-the-sick-room-b-Essays_74254
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74254-h/images/cover.jpg
 creator:
   author:
     agent_name: Martineau, Harriet
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/25319
     wikipedia: https://en.wikipedia.org/wiki/Harriet_Martineau
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74254#Life-in-the-sick-room-b-Essays
 edition_note: Second edition
 gutenberg_issued: '2024-08-14'
 gutenberg_type: Text
